samples/_failures_safe/1761043687_b370c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84815492.c: In function ‘main’:
./samples/SAFE/__tmp_84815492.c:141:9: error: expected declaration or statement at end of input
  141 |         entry->timestamp = timestamp;
      |         ^~~~~
./samples/SAFE/__tmp_84815492.c:141:9: error: expected declaration or statement at end of input
